force-app/main/default/objects/Checklist_Item_Step__c/Checklist_Item_Step__c.object-meta.xml
<CustomObject>
    <description>A sub-step within a checklist item (2-3 steps per item for multi-stage tasks).</description>
    <label>Checklist Item Step</label>
    <nameField>
        <displayFormat>STEP-{00000000}</displayFormat>
        <label>Step Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Item Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>