force-app/main/default/objects/Checklist_Item_Step__c/fields/Checklist_Item__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Item__c</fullName>
    <label>Checklist Item</label>
    <type>MasterDetail</type>
    <referenceTo>Checklist_Item__c</referenceTo>
    <relationshipLabel>Steps</relationshipLabel>
    <relationshipName>Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>