force-app/main/default/objects/Checklist_Item_Step__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>3000</length>
    <description>What the user needs to do for this step.</description>
</CustomField>