force-app/main/default/objects/Checklist_Item_Step__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Display order of the step within the item.</description>
</CustomField>