force-app/main/default/objects/Checklist_Item_Step__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Display title of the step.</description>
</CustomField>